example-manifests/01-istio/01-v1.1.0-deploy/demo-v1-1-0-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-v1-1-0
  namespace: demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: demo
        version: "v1.1.0"
    spec:
      containers: 
      - name: demo
        image: krancour/blue-green-demo:v1.1.0
        ports:
        - name: http
          containerPort: 8080
