example-manifests/01-istio/01-v1.1.0-deploy/demo-destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo
  namespace: demo
spec:
  host: demo
  subsets:
  - name: v1-0-0
    labels:
      version: v1.0.0
  - name: v1-1-0
    labels:
      version: v1.1.0
